Column and Layout updates for grid

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
         
-        <article>
+        <article class="flow">
 			<img src="Images/Merman.PNG" alt="Merman" class="article-main-image" />
 			<h1>Lorem Ipsum</h1>
 			<p class="lead">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
 			
-			<div class="article-body">
+			<div class="article-body flow">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quam mi, feugiat porta nisi a, imperdiet viverra leo. Etiam gravida tellus in ullamcorper interdum. Proin quis ornare velit. Nullam non cursus neque, at tempor justo. Quisque ligula justo, vulputate quis ante id, venenatis egestas risus. Suspendisse quis cursus dolor. Aenean a tortor eros. Quisque porttitor leo et libero porttitor dignissim.
 				</p>
