Article Style updates

--- a/index.html
+++ b/index.html
@@ -3,35 +3,18 @@
 	<head>
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Oswald:wght@300..700&display=swap" rel="stylesheet">
-		<link href="Styles/styles.css" rel="stylesheet">
+		<link href="Styles/card.css" rel="stylesheet">
 		<title>Don Pavlik</title>
 	</head>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-        
-        <article class="flow">
-			<img src="Images/Merman.PNG" alt="Merman" class="article-main-image" />
-			<h1>Lorem Ipsum</h1>
-			<p class="lead">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-			
-			<div class="article-body flow">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quam mi, feugiat porta nisi a, imperdiet viverra leo. Etiam gravida tellus in ullamcorper interdum. Proin quis ornare velit. Nullam non cursus neque, at tempor justo. Quisque ligula justo, vulputate quis ante id, venenatis egestas risus. Suspendisse quis cursus dolor. Aenean a tortor eros. Quisque porttitor leo et libero porttitor dignissim.
+        <div class="card">
+			<div class="card-content">
+				<h2 class="card-title">Automation, AI, and...</h2>
+				<p class="card-body">
+					Tools that help you get back time.
 				</p>
-				<p>
-					Maecenas velit nibh, dignissim nec dolor quis, blandit venenatis mauris. Vivamus vitae risus ut metus eleifend fermentum. Mauris at risus nisl. Pellentesque ultricies odio nec enim imperdiet, vel efficitur augue ultricies. Aliquam tempus urna mi, in bibendum justo placerat id. Donec lacinia pulvinar quam ac tincidunt. Suspendisse at tempus quam. Suspendisse vel dolor augue. Praesent id mauris pharetra ex tincidunt euismod. Sed id nunc at risus sodales dignissim. Nullam tristique interdum convallis. Integer molestie auctor felis sed porta. Fusce commodo bibendum arcu at fermentum.
-				</p>
-				<p>
-					Donec erat leo, bibendum vehicula porttitor bibendum, dapibus sed lacus. Vestibulum viverra euismod augue ut semper. Aenean at risus orci. Etiam eget aliquet lacus. Cras rhoncus quam eleifend mauris fringilla malesuada. Maecenas vitae purus iaculis enim varius pellentesque eget ac erat. Aenean efficitur tristique lacus, vel lobortis augue condimentum sed. Aenean a dolor ut tortor condimentum mollis. Suspendisse hendrerit elit orci, et lobortis metus cursus ut. Morbi molestie, diam in facilisis sodales, lacus sapien cursus ex, ac convallis enim ex at tellus. Etiam et odio eget urna auctor venenatis eu eget nisl.
-				</p>
-				<p>
-					Nunc dignissim sit amet lacus et vestibulum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras ultrices ac nunc ut sodales. In hac habitasse platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce blandit lacus risus, ut commodo eros semper sit amet. Nullam lobortis et odio eu vehicula. Praesent sit amet ex metus. Pellentesque maximus volutpat dolor non iaculis. Proin luctus a justo id euismod. Nullam a sollicitudin purus. In porta euismod accumsan. Mauris a facilisis dui, in finibus mauris. Aliquam ornare dignissim egestas. Morbi ac porta turpis, eu tristique nisl.
-				</p>
-				<p>
-				    Quisque tellus nisi, dictum a diam et, posuere vehicula nunc. Nunc rhoncus velit sed est fringilla, in ullamcorper turpis fringilla. Cras vitae fermentum magna. Integer eu elit fermentum elit rhoncus volutpat. Sed rutrum, sapien tempus sagittis interdum, nibh nisl vestibulum turpis, sit amet vestibulum turpis felis vitae elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed lobortis nisi ex, vel commodo nunc hendrerit at. Praesent sit amet sapien vel orci finibus varius. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc lectus leo, luctus vel sollicitudin sit amet, molestie in dolor. Vestibulum sed augue est. Nullam sit amet rutrum lorem. Aenean interdum fermentum commodo. Donec id lorem auctor, posuere libero nec, varius odio. Nunc vitae fringilla dui, sed fringilla lectus.
-				</p>
+				<a href="Articles/AutomationAIAndUnitTest.html" class="button">Learn More</a>
 			</div>
-        </article>
+		</div>
     </body>
 </html>
