Addition of navigation

--- a/Prototypes/YNAB/index.html
+++ b/Prototypes/YNAB/index.html
@@ -8,11 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>    
-    <d class="left-navigation"></d>
-    <d class="content">
-        <d class="header"></d>
-        <d class="toolbar"></d>
-        <d class="data"></d>
-    </d>
+    <div class="left-navigation">
+        <div class="main-menu-caption">RYW Budget Sample</div>
+        <ul>
+            <li class="active"><span class="icon"><img src="icons/budget.svg" /></span>Budget</li>
+            <li><span class="icon"><img src="icons/budget.svg" /></span>Reports</li>
+            <li><span class="icon"><img src="icons/budget.svg" /></span>All Accounts</li>
+            <li><span class="icon"><img src="icons/budget.svg" /></span>Collapse</li>
+        </ul>
+    </div>
+    <div class="content">
+        <div class="header"></div>
+        <div class="toolbar"></div>
+        <div class="data">
+            <div class="items"></div>
+            <div class="summary"></div>
+        </div>
+    </div>
 </body>
 </html>
