Slight update to second layer of navigation

--- a/Prototypes/YNAB/index.html
+++ b/Prototypes/YNAB/index.html
@@ -16,6 +16,17 @@
             <li><span class="icon"><img src="icons/budget.svg" /></span>All Accounts</li>
             <li><span class="icon"><img src="icons/budget.svg" /></span>Collapse</li>
         </ul>
+        <div class="budget-summary">
+            <span>Budget</span><span class="amount">$3,030.00</span>
+            <ul>
+                <li><span>Checking</span><span class="amount">$3,400.00</span></li>
+                <li><span>VISA</span><span class="amount">-$370.00</span></li>
+                <li><span>Line of Credit</span><span class="amount">$0.00</span></li>
+            </ul>
+        </div>
+        <div>
+            Add Account
+        </div>
     </div>
     <div class="content">
         <div class="header"></div>
